Archive2/b2/b81e1a4ef87ee5/output
main.cpp: In function 'int main()':
main.cpp:12:24: error: 'mul_inv' was not declared in this scope
  cout<<mul_inv(42, 2017)<<endl;
                        ^
main.cpp: In function 'int modInverse(int, int)':
main.cpp:9:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
